err/hassmart-homeassistant.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.6.dist-info'...
Listing './lib/python3.5/site-packages/astral-1.4.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/hassmart_homeassistant-0.60.0.dist-info'...
Listing './lib/python3.5/site-packages/homeassistant'...
Listing './lib/python3.5/site-packages/homeassistant/components'...
Listing './lib/python3.5/site-packages/homeassistant/components/ads'...
Listing './lib/python3.5/site-packages/homeassistant/components/alarm_control_panel'...
Listing './lib/python3.5/site-packages/homeassistant/components/alexa'...
Listing './lib/python3.5/site-packages/homeassistant/components/automation'...
Listing './lib/python3.5/site-packages/homeassistant/components/binary_sensor'...
Listing './lib/python3.5/site-packages/homeassistant/components/calendar'...
Listing './lib/python3.5/site-packages/homeassistant/components/camera'...
Listing './lib/python3.5/site-packages/homeassistant/components/climate'...
Listing './lib/python3.5/site-packages/homeassistant/components/cloud'...
Listing './lib/python3.5/site-packages/homeassistant/components/config'...
Listing './lib/python3.5/site-packages/homeassistant/components/counter'...
Listing './lib/python3.5/site-packages/homeassistant/components/cover'...
Listing './lib/python3.5/site-packages/homeassistant/components/device_tracker'...
Listing './lib/python3.5/site-packages/homeassistant/components/emulated_hue'...
Listing './lib/python3.5/site-packages/homeassistant/components/fan'...
Listing './lib/python3.5/site-packages/homeassistant/components/frontend'...
Listing './lib/python3.5/site-packages/homeassistant/components/frontend/www_static'...
Listing './lib/python3.5/site-packages/homeassistant/components/frontend/www_static/images'...
Listing './lib/python3.5/site-packages/homeassistant/components/google_assistant'...
Listing './lib/python3.5/site-packages/homeassistant/components/group'...
Listing './lib/python3.5/site-packages/homeassistant/components/homematic'...
Listing './lib/python3.5/site-packages/homeassistant/components/http'...
Listing './lib/python3.5/site-packages/homeassistant/components/image_processing'...
Listing './lib/python3.5/site-packages/homeassistant/components/light'...
Listing './lib/python3.5/site-packages/homeassistant/components/lock'...
Listing './lib/python3.5/site-packages/homeassistant/components/mailbox'...
Listing './lib/python3.5/site-packages/homeassistant/components/media_player'...
Listing './lib/python3.5/site-packages/homeassistant/components/mqtt'...
Listing './lib/python3.5/site-packages/homeassistant/components/notify'...
Listing './lib/python3.5/site-packages/homeassistant/components/persistent_notification'...
Listing './lib/python3.5/site-packages/homeassistant/components/recorder'...
Listing './lib/python3.5/site-packages/homeassistant/components/remember_the_milk'...
Listing './lib/python3.5/site-packages/homeassistant/components/remote'...
Listing './lib/python3.5/site-packages/homeassistant/components/scene'...
Listing './lib/python3.5/site-packages/homeassistant/components/sensor'...
Listing './lib/python3.5/site-packages/homeassistant/components/switch'...
Listing './lib/python3.5/site-packages/homeassistant/components/system_log'...
Listing './lib/python3.5/site-packages/homeassistant/components/telegram_bot'...
Listing './lib/python3.5/site-packages/homeassistant/components/timer'...
Listing './lib/python3.5/site-packages/homeassistant/components/tts'...
Listing './lib/python3.5/site-packages/homeassistant/components/vacuum'...
Listing './lib/python3.5/site-packages/homeassistant/components/weather'...
Listing './lib/python3.5/site-packages/homeassistant/components/wink'...
Listing './lib/python3.5/site-packages/homeassistant/components/zha'...
Listing './lib/python3.5/site-packages/homeassistant/components/zwave'...
Listing './lib/python3.5/site-packages/homeassistant/helpers'...
Listing './lib/python3.5/site-packages/homeassistant/scripts'...
Listing './lib/python3.5/site-packages/homeassistant/scripts/benchmark'...
Listing './lib/python3.5/site-packages/homeassistant/scripts/macos'...
Listing './lib/python3.5/site-packages/homeassistant/util'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/typing-3.6.2.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/voluptuous'...
Listing './lib/python3.5/site-packages/voluptuous-0.10.5.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.16.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
